.. Author notes: this file is formatted with restructured text
   (http://docutils.sourceforge.net/docs/user/rst/quickstart.html).
   The changelog style is adapted from Apache Lucene.

Next Version

API Changes:
  * util-core: `Future.willEqual()` now returns `Future[Boolean]` instead of
               `Promise[Boolean]`.
  * util-core: rename VarSource to ActivitySource. remove
               com.twitter.io.exp.VarSource.Result, return Activity[T]
               instead of Var[VarSource.Result[T]]. Remove FailoverVarSource in
               favor of ActivitySource.orElse.
  * util-core: `TimeFormat` now throws IllegalArgumentException if the pattern
               uses the week year ('Y') without the week number ('w')
  * util-core: `Spool.++` used to force its argument, but now it is evaluated
               only if `this` Spool is empty. To revert to existing behavior,
               simply force the argument before passing it to ++.

Changes in Runtime Behavior:
  * util-core: Futures still rethrow on fatals, but now also Monitor.handle on
               them.

  * util-core: `Future.onFailure` now only applies a `PartialFunction` if
               `PartialFunction.isDefinedAt` returns true.

  * util-core: `AsyncSemaphore` now requires that `initialPermits` be positive.

6.24.0 2014-12-12

New Features:
  * util-core: Add method .flushBatch() to batched future returned by Future.batched()
               that immediately initiates processing of all remaining queued requests
  * util-core: Add Future.collect() method that collects over Map's values
  * util-stats: Create a new module, `util-stats` to move `finagle-core`
                StatsReceivers to.  They retain the `com.twitter.finagle`
                namespace to ease the transition.

Deprecation:
  * util-stats: Deprecate `com.twitter.finagle.stats.StatsReceiver#time{,TimeFuture}`.
                Instead, please use the `com.twitter.finagle.stats.Stat` helpers