@@ -1,8 +1,7 @@
 package com.twitter.io
 
 import com.twitter.concurrent.Spool
-import com.twitter.concurrent.Spool.{Empty, *::}
-import com.twitter.util.{Future, Promise, Closable, Time, Throw}
+import com.twitter.util._
 import java.io.{
   File, FileInputStream, FileNotFoundException, InputStream, OutputStream}
 
@@ -55,35 +54,109 @@ object Reader {
   class ReaderDiscarded
     extends Exception("This writer's reader has been discarded")
 
+  /**
+   * A [[Reader]] that is linked with a [[Writer]] and `close`-ing
+   * is synchronous.
+   *
+   * Just as with [[Reader readers]] and [[Writer writers]],
+   * only one outstanding `read` or `write` is permitted.
+   *
+   * For a proper `close`, it should only be done when
+   * no writes are outstanding:
+   * {{{
+   *   val rw = Reader.writable()
+   *   ...
+   *   rw.write(buf).before(rw.close())
+   * }}}
+   *
+   * If a producer is interested in knowing when all writes
+   * have been read and the reader has seen the EOF, it can
+   * wait until the future returned by `close()` is satisfied:
+   * {{{
+   *   val rw = Reader.writable()
+   *   ...
+   *   rw.close().ensure {
+   *     println("party on! ♪┏(・o･)┛♪ the Reader has seen the EOF")
+   *   }
+   * }}}
+   */
+  trait Writable extends Reader with Writer with Closable
+
   private sealed trait State
+
+  /** Indicates no reads or writes are pending, and is not closed. */
   private object Idle extends State
-  private case class Reading(n: Int, p: Promise[Option[Buf]]) extends State
-  private case class Writing(buf: Buf, p: Promise[Unit]) extends State
-  private case class Failing(exc: Throwable) extends State
-  private object Eof extends State
 
   /**
-   * Create a Reader which is also a Writer. The reader is complete
-   * (i.e. end-of-stream) when it is closed; it may only be closed
-   * while there are no pending writes.
+   * Indicates a read is pending and is awaiting a `write`.
+   *
+   * @param n number of bytes to read.
+   * @param p when satisfied it indicates that this read has completed.
    */
-  def writable(): Reader with Writer with Closable = new Reader with Writer with Closable {
+  private case class Reading(n: Int, p: Promise[Option[Buf]]) extends State
+
+  /**
+   * Indicates a write of `buf` is pending to be `read`.
+   *
+   * @param buf the [[Buf]] to write.
+   * @param p when satisfied it indicates that this write has been fully read.
+   */
+  private case class Writing(buf: Buf, p: Promise[Unit]) extends State
+
+  /** Indicates this was `fail`-ed or `discard`-ed. */
+  private case class Failing(exc: Throwable) extends State
+
+  /**
+   * Indicates a close occurred while `Idle` — no reads or writes were pending.
+   *
+   * @param reof satified when a `read` sees the EOF.
+   */
+  private case class Closing(reof: Promise[Unit]) extends State
+
+  /** Indicates the reader has seen the EOF. No more reads or writes are allowed. */
+  private case object Eof extends State
+
+  /**
+   * Create a new [[Writable]] which is a [[Reader]] that is linked
+   * with a [[Writer]].
+   */
+  def writable(): Writable = new Writable {
+    // thread-safety provided by synchronization on `this`
     private[this] var state: State = Idle
 
+    /**
+     * The returned [[com.twitter.util.Future]] is satisfied when this has either been
+     * [[discard discarded]], a [[read]] has seen the EOF, or a [[read]]
+     * has seen the [[fail failure]].
+     */
     def close(deadline: Time): Future[Unit] = synchronized {
       state match {
-        case Failing(_) | Eof =>
+        case Failing(t) =>
+          Future.exception(t)
+
+        case Eof =>
+          Future.Done
+
+        case Closing(p) =>
+          p
+
         case Idle =>
-          state = Eof
+          val reof = new Promise[Unit]()
+          state = Closing(reof)
+          reof
+
         case Reading(_, p) =>
           state = Eof
-          p.setValue(None)
-        case Writing(_, p) =>
-          state = Eof
-          p.setException(new IllegalStateException("close while write is pending"))
-      }
+          p.update(Return.None)
+          Future.Done
 
-      Future.Done
+        case Writing(_, p) =>
+          val reof = new Promise[Unit]()
+          state = Closing(reof)
+          p.setException(new IllegalStateException("close while write is pending"))
+          reof
+
+      }
     }
 
     def write(buf: Buf): Future[Unit] = synchronized {
@@ -91,21 +164,23 @@ object Reader {
         case Failing(exc) =>
           Future.exception(exc)
 
-        case Eof =>
+        case Eof | Closing(_) =>
           Future.exception(new IllegalStateException("write after close"))
 
         case Idle =>
-          val p = new Promise[Unit]
+          val p = new Promise[Unit]()
           state = Writing(buf, p)
           p
 
         case Reading(n, p) if n < buf.length =>
-          val nextp = new Promise[Unit]
+          // pending reader doesn't have enough space for this write
+          val nextp = new Promise[Unit]()
           state = Writing(buf.slice(n, buf.length), nextp)
           p.setValue(Some(buf.slice(0, n)))
           nextp
 
         case Reading(n, p) =>
+          // pending reader has enough space for the full write
           state = Idle
           p.setValue(Some(buf))
           Future.Done
@@ -120,6 +195,11 @@ object Reader {
         case Failing(exc) =>
           Future.exception(exc)
 
+        case Closing(reof) =>
+          state = Eof
+          reof.setDone()
+          Future.None
+
         case Eof =>
           Future.None
 
@@ -129,11 +209,13 @@ object Reader {
           p
 
         case Writing(buf, p) if buf.length <= n =>
+          // pending write can fully fit into this requested read
           state = Idle
           p.setDone()
           Future.value(Some(buf))
 
         case Writing(buf, p) =>
+          // pending write is larger than the requested read
           state = Writing(buf.slice(n, buf.length), p)
           Future.value(Some(buf.slice(0, n)))
 
@@ -142,18 +224,28 @@ object Reader {
       }
     }
 
-    def discard() = fail(new ReaderDiscarded)
+    def discard(): Unit = synchronized {
+      val cause = new ReaderDiscarded()
+      fail(cause)
+    }
 
     def fail(cause: Throwable): Unit = synchronized {
       // We fix the state before inspecting it so we enter in a
       // good state if setting promises recurses.
       val oldState = state
-      state = Failing(cause)
       oldState match {
-        case Idle | Eof | Failing(_) =>
+        case Eof | Failing(_) =>
+          // do not update state to failing
+        case Idle =>
+          state = Failing(cause)
+        case Closing(reof) =>
+          state = Failing(cause)
+          reof.setException(cause)
         case Reading(_, p) =>
+          state = Failing(cause)
           p.setException(cause)
         case Writing(_, p) =>
+          state = Failing(cause)
           p.setException(cause)
       }
     }
@@ -269,7 +361,7 @@ trait Writer {
     * Write a chunk. The returned future is completed
     * when the chunk has been fully read by the sink.
     *
-    * Only one outstanding read is permitted, thus
+    * Only one outstanding `write` is permitted, thus
     * backpressure is asserted.
     */
   def write(buf: Buf): Future[Unit]
