@@ -7,15 +7,20 @@ Next Version
 API Changes:
   * util-core: `Future.willEqual()` now returns `Future[Boolean]` instead of
                `Promise[Boolean]`.
+
   * util-core: rename VarSource to ActivitySource. remove
                com.twitter.io.exp.VarSource.Result, return Activity[T]
                instead of Var[VarSource.Result[T]]. Remove FailoverVarSource in
                favor of ActivitySource.orElse.
+
   * util-core: `TimeFormat` now throws IllegalArgumentException if the pattern
                uses the week year ('Y') without the week number ('w')
   * util-core: `Spool.++` used to force its argument, but now it is evaluated
                only if `this` Spool is empty. To revert to existing behavior,
                simply force the argument before passing it to ++.
+
+  * util-core: `Reader.writable()` returns a new type, `Reader.Writable`, which
+               combines `Reader`, `Writer` and `Closable`.
 
 Changes in Runtime Behavior:
   * util-core: Futures still rethrow on fatals, but now also Monitor.handle on
@@ -25,6 +30,9 @@ Changes in Runtime Behavior:
                `PartialFunction.isDefinedAt` returns true.
 
   * util-core: `AsyncSemaphore` now requires that `initialPermits` be positive.
+
+  * util-core: The `Reader` and `Writer` from `Reader.Writable.close()` are now
+               synchronized on `close`.
 
 6.24.0 2014-12-12
 
